This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

13/12/2006
- Added tremoulus-support to q3map2

08/12/2006
namespace
- Entity names are now drawn for group entities in Doom3 and Quake 3 mode (namespace)
- Fixed translucent brushes becoming invisible when selected (Shaderman)

06/11/2006
namespace
- (TODO) Texture sizes sometimes vary wildly. New texture browser option: View -> Fixed Size.
  Code parts taken from DarkRadiant. (Shaderman)
- Added new texture browser option: View -> Hide Image Missing. (Shaderman)
- Fixed new D3 lights don't have a light_radius key. (Shaderman)
- Fixed hotkey collision (paste to camera/view menu). New View shortcut = ALT+W. (Shaderman)
- Fixed .wad MMB 3d view texture selection bug. (Shaderman)

04/11/2006
namespace
- Added warzow-support to q3map2

12/10/2006
namespace
- Updated help menu web links (removed map-center.com, added ETB documentation) (Shaderman)
- Added check for existing worldspawn if a new one should be added with the entity menu (Shaderman)
- Fixed Entity -> Ungroup (Topsun)
- Fixed hotkey collision ALT+M (filter botclip/Modify menu). New Modify shortcut = ALT+O (Shaderman)
- Updated Window Layout images (Shaderman)
- Fixed (TODO) XYWindow: save show-workzone option (Shaderman)
- Fixed (TODO) Toolbar: add shortcut to tooltips for toolbar buttons (Shaderman)
- Fixed (TODO) GUI: detachable submenus (Shaderman)

09/10/2006
namespace
- Added option to toggle the camera window stats on/off (Shaderman)
  (view --> show --> show stats)


08/10/2006
namespace
- Fix for bug 1106 - .wad files don't get listed in the textures menu (Shaderman)
  (http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1106)
- Added initial support for Prey (Shaderman)
- Fixed entity inspector sliders to always show (Shaderman)
- Added NOTES subsection to the entity inspector listing .def "editor_usage*" values (Shaderman)

07/10/2006
namespace