@@ -2,6 +2,5 @@
 <component name="archivezip">
   <dir name="modules">
     <file name="archivezip.dll"/>
-    <file name="archivezip.pdb"/>
   </dir>
 </component>
