@@ -1,6 +1,5 @@
 <component name="brushexport">
   <dir name="plugins">
     <file name="brushexport.dll"/>
-    <file name="brushexport.pdb"/>
   </dir>
 </component>
