@@ -2,6 +2,5 @@
 <component>
   <dir name="modules">
     <file name="imagehl.dll"/>
-    <file name="imagehl.pdb"/>
   </dir>
 </component>
