@@ -2,6 +2,5 @@
 <component>
   <dir name="modules">
     <file name="imagem8.dll"/>
-    <file name="imagem8.pdb"/>
   </dir>
 </component>
