@@ -2,7 +2,6 @@
 <component>
   <dir name="modules">
     <file name="mapq3.dll"/>
-    <file name="mapq3.pdb"/>
   </dir>
 </component>
 
