@@ -1,6 +1,5 @@
 <component name="sunplug">
   <dir name="plugins">
     <file name="sunplug.dll"/>
-    <file name="sunplug.pdb"/>
   </dir>
 </component>
